force-app/main/default/objects/Previous_Policy_Details__c/Previous_Policy_Details__c.object-meta.xml
<CustomObject>
    <label>Previous Policy Detail</label>
    <nameField>
        <label>Previous Policy Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Previous Policy Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>