force-app/main/default/objects/Previous_Policy_Details__c/fields/CumulativeBonus__c.field-meta.xml
<CustomField>
    <fullName>CumulativeBonus__c</fullName>
    <label>Cumulative Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>