force-app/main/default/objects/Previous_Policy_Details__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Previous Policy Details</relationshipLabel>
    <relationshipName>Previous_Policy_Details</relationshipName>
    <type>Lookup</type>
</CustomField>