force-app/main/default/objects/Previous_Policy_Details__c/fields/DateOfFirstEnrollment__c.field-meta.xml
<CustomField>
    <fullName>DateOfFirstEnrollment__c</fullName>
    <label>Date Of First Enrollment</label>
    <type>Date</type>
</CustomField>