force-app/main/default/objects/Previous_Policy_Details__c/fields/ExpiringBaseSI__c.field-meta.xml
<CustomField>
    <fullName>ExpiringBaseSI__c</fullName>
    <label>Gross SI in Previous Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>