force-app/main/default/objects/Previous_Policy_Details__c/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <label>Previous Insurer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>