force-app/main/default/objects/Previous_Policy_Details__c/fields/NameOfInsuredPerson__c.field-meta.xml
<CustomField>
    <fullName>NameOfInsuredPerson__c</fullName>
    <label>Name Of Insured Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>