force-app/main/default/objects/Previous_Policy_Details__c/fields/OptedProductWP__c.field-meta.xml
<CustomField>
    <fullName>OptedProductWP__c</fullName>
    <label>Opted Product WP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>