force-app/main/default/objects/Previous_Policy_Details__c/fields/OptedSi__c.field-meta.xml
<CustomField>
    <fullName>OptedSi__c</fullName>
    <label>Sum Insured in Previous Policy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>