force-app/main/default/objects/Previous_Policy_Details__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Previous Policy Details</relationshipLabel>
    <relationshipName>Previous_Policy_Details</relationshipName>
    <type>Lookup</type>
</CustomField>