force-app/main/default/objects/Previous_Policy_Details__c/fields/PolicyYear__c.field-meta.xml
<CustomField>
    <fullName>PolicyYear__c</fullName>
    <label>Policy Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>