force-app/main/default/objects/Previous_Policy_Details__c/fields/PreviousPolicyEndDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousPolicyEndDate__c</fullName>
    <label>Previous Policy End Date</label>
    <type>Date</type>
</CustomField>