force-app/main/default/objects/Previous_Policy_Details__c/fields/PreviousPolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PreviousPolicyNumber__c</fullName>
    <externalId>true</externalId>
    <label>Previous Policy Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>