force-app/main/default/objects/Previous_Policy_Details__c/fields/PreviousPolicyStartDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousPolicyStartDate__c</fullName>
    <label>Previous Policy Start Date</label>
    <type>Date</type>
</CustomField>