force-app/main/default/objects/Previous_Policy_Details__c/fields/TypeOfCover__c.field-meta.xml
<CustomField>
    <fullName>TypeOfCover__c</fullName>
    <label>Type Of Cover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>