force-app/main/default/objects/Previous_Policy_Details__c/fields/WaiverOfWPforSI__c.field-meta.xml
<CustomField>
    <fullName>WaiverOfWPforSI__c</fullName>
    <label>Waiver Of WP for SI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>