force-app/main/default/objects/Previous_Policy_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PreviousPolicyNumber__c</columns>
    <columns>NameOfInsuredPerson__c</columns>
    <columns>DateOfFirstEnrollment__c</columns>
    <columns>Insurer__c</columns>
    <columns>PolicyYear__c</columns>
    <columns>Product__c</columns>
    <columns>TypeOfCover__c</columns>
    <columns>ExpiringBaseSI__c</columns>
    <columns>CumulativeBonus__c</columns>
    <columns>ExpiringWaitingPeriod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>